--- a/src/main/resources/assets/fracdustry/lang/zh_cn.json
+++ b/src/main/resources/assets/fracdustry/lang/zh_cn.json
@@ -19,6 +19,7 @@
   "item.fracdustry.aluminum_plate": "铝板",
   "item.fracdustry.bronze_ingot": "青铜锭",
   "item.fracdustry.bronze_plate": "青铜板",
+  "item.fracdustry.cobalt.ingot": "钴锭",
   "item.fracdustry.lithium_ingot": "锂锭",
   "item.fracdustry.steel_ingot": "钢锭",
   "item.fracdustry.steel_plate": "钢板",
@@ -26,9 +27,10 @@
   "item.fracdustry.tin_plate": "锡板",
   "item.fracdustry.titanium_ingot": "钛锭",
   "item.fracdustry.titanium_plate": "钛板",
+  "item.fracdustry.uranium_ingot": "铀锭",
 
-  "itemGroup.fracdustry_material": "分形工业：材料",
-  "itemGroup.fracdustry_machinery": "分形工业：机器",
+  "itemGroup.fracdustry.material": "分形工业：材料",
+  "itemGroup.fracdustry.machinery": "分形工业：机器",
 
   "tooltips.fracdustry.generator":"热力发电机利用热能加热水产生水蒸气以提供机械能，后者最终由内置的动能发电机转换为电能。",
 
