Peak: [Chore] Plates and registry overhaul (Texture part)
Added models and translations for the copper and iron plates.

--- a/src/main/resources/assets/fracdustry/lang/en_us.json
+++ b/src/main/resources/assets/fracdustry/lang/en_us.json
@@ -20,6 +20,8 @@
   "item.fracdustry.bronze_ingot": "Bronze Ingot",
   "item.fracdustry.bronze_plate": "Bronze Plate",
   "item.fracdustry.cobalt_ingot": "Cobalt Ingot",
+  "item.fracdustry.copper_plate": "Copper Plate",
+  "item.fracdustry.iron_plate": "Iron Plate",
   "item.fracdustry.lithium_ingot": "Lithium Ingot",
   "item.fracdustry.steel_ingot": "Steel Ingot",
   "item.fracdustry.steel_plate": "Steel Plate",
