--- a/src/main/resources/assets/fracdustry/lang/zh_cn.json
+++ b/src/main/resources/assets/fracdustry/lang/zh_cn.json
@@ -19,7 +19,9 @@
   "item.fracdustry.aluminum_plate": "铝板",
   "item.fracdustry.bronze_ingot": "青铜锭",
   "item.fracdustry.bronze_plate": "青铜板",
-  "item.fracdustry.cobalt.ingot": "钴锭",
+  "item.fracdustry.cobalt_ingot": "钴锭",
+  "item.fracdustry.copper_plate": "铜板",
+  "item.fracdustry.iron_plate": "铁板",
   "item.fracdustry.lithium_ingot": "锂锭",
   "item.fracdustry.steel_ingot": "钢锭",
   "item.fracdustry.steel_plate": "钢板",
