[Chore] Initially completed the GUI and inventory of thermal generators, merged the new texture progress from the original repository.
(Buggy) Thermal Generator GUI Initial
Texture changes

Co-Authored-By: MikhailTapio <81358657+MikhailTapio@users.noreply.github.com>

--- a/src/main/resources/assets/fracdustry/lang/en_us.json
+++ b/src/main/resources/assets/fracdustry/lang/en_us.json
@@ -2,6 +2,7 @@
   "block.fracdustry.cable": "Energy Cable",
 
   "block.fracdustry.thermal_generator": "Thermal Generator",
+  "block.fracdustry.microwave_generator": "Microwave Generator",
 
   "block.fracdustry.bauxite_ore": "Bauxite Ore",
   "block.fracdustry.cassiterite_ore": "Cassiterite Ore",
@@ -19,9 +20,6 @@
   "item.fracdustry.aluminum_plate": "Aluminum Plate",
   "item.fracdustry.bronze_ingot": "Bronze Ingot",
   "item.fracdustry.bronze_plate": "Bronze Plate",
-  "item.fracdustry.cobalt_ingot": "Cobalt Ingot",
-  "item.fracdustry.copper_plate": "Copper Plate",
-  "item.fracdustry.iron_plate": "Iron Plate",
   "item.fracdustry.lithium_ingot": "Lithium Ingot",
   "item.fracdustry.steel_ingot": "Steel Ingot",
   "item.fracdustry.steel_plate": "Steel Plate",
@@ -29,12 +27,14 @@
   "item.fracdustry.tin_plate": "Tin Plate",
   "item.fracdustry.titanium_ingot": "Titanium Ingot",
   "item.fracdustry.titanium_plate": "Titanium Plate",
-  "item.fracdustry.uranium_ingot": "Uranium Ingot",
 
   "itemGroup.fracdustry.material": "Fracdustry: Material",
   "itemGroup.fracdustry.machinery": "Fracdustry: Machinery",
 
-  "tooltips.fracdustry.generator": "The thermal generator uses thermal energy to heat water to produce steam to provide mechanical energy, which is eventually converted into electrical energy by the built-in kinetic generator.",
+  "tooltips.fracdustry.energy_cable":"An energy cable connects and transfers energy between non-adjacent machines.",
+  "tooltips.fracdustry.thermal_generator.1": "The thermal generator uses thermal energy to heat water to produce steam to provide mechanical energy,",
+  "tooltips.fracdustry.thermal_generator.2": "which is eventually converted into electrical energy by the built-in kinetic generator."
+  "tooltips.fracdustry.microwave_generator": "Made of special materials, the microwave generator captures microwave signal and convert it into tiny electrical currents.",
 
   "units.fracdustry.sec": " sec"
 }
